--- a/hiphackio/sass/partials/_candidates.scss
+++ b/hiphackio/sass/partials/_candidates.scss
@@ -7,12 +7,14 @@
   }
 
   .candidate-select {
-    @include flex(initial);
     @include display-flex;
     @include flex-direction(column);
     border-left: $border;
     width: 300px;
+    position: fixed;
+    margin-left: -300px;
     height: 100%;
+    padding-bottom: $main-nav-height;
 
     .filter {
       @include flex(initial);
@@ -51,8 +53,8 @@
 
     .search-results {
       @include flex(1);
-      padding: 5px 0 15px 20px;
-      overflow: auto;
+      padding: 5px 20px 15px 20px;
+      position: relative;
 
       .candidate-item {
         margin-top: 10px;
@@ -81,7 +83,6 @@
 
         .name {
           @include formal-font;
-          font-size: 1em;
         }
 
         .position {
@@ -109,7 +110,7 @@
     @include display-flex;
     @include flex-direction(row);
     @include flex(1);
-    overflow: scroll;
+    margin-right: 300px;
     height: 100%;
     padding: 0 40px 0 25px;
 
