--- a/hiphackio/sass/partials/_navbar.scss
+++ b/hiphackio/sass/partials/_navbar.scss
@@ -8,6 +8,7 @@ nav.main-nav {
   position: relative;
   z-index: 100;
   border-bottom: $border;
+  @include flex(initial);
 
   a.logo {
     height: 60px;
