--- a/hiphackio/sass/partials/_page.scss
+++ b/hiphackio/sass/partials/_page.scss
@@ -29,6 +29,7 @@ a:hover {
   position: relative;
 	color: $cl-base-font;
   position: relative;
+  @include flex(1);
   z-index: 0;
 }
 
@@ -36,6 +37,8 @@ a:hover {
   height: 100%;
   margin-top: -60px;
   padding-top: 60px;
+  @include flex(1);
+  overflow: scroll;
 }
 
 .page-clear {
@@ -44,6 +47,8 @@ a:hover {
   width: 100%;
   margin: 0 auto;
   background-size: cover;
+  @include display-flex;
+  @include flex-direction(column);
 }
 
 .main-content {
